--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<! docType html> 
-<html>
-<head>
-</head>
-<title> George's Projects</title>
-<body>
-  <h2> George's GitHub Projects </h2>
-soon...
-</body>
-</html>
+---
+layout: default
+title: George's Projects
+---
+<h2> About </h2>
+<p>
+  I like to write code...
+</p>
+
+<p>
+  I live near Sandpoint, Idaho
+</p>
+<a href="http://twitter.com/gredinger">Twitter</a>,
+
+<a href="http://github.com/georgeredinger">GitHub</a>,
+
+<a href="http://georgeredinger.com">Blog</a>,
