--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 layout: default
 title: George's Projects
 ---
+
 <h2> About </h2>
 <p>
   I like to write code...
 </p>
 
 <p>
-  I live near Sandpoint, Idaho
+  I live near Sandpoint, Idaho I like to write long sentences so as to test the wrapping charactaristics of this thing
 </p>
 <a href="http://twitter.com/gredinger">Twitter</a>,
-
 <a href="http://github.com/georgeredinger">GitHub</a>,
-
 <a href="http://georgeredinger.com">Blog</a>,
+
