--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
----  
-layout: post 
-title: George's projects
----  
-    <p>Hi,</p>
+--- 
+layout: about 
+title: About George's projects
+--- 
+    Hi
+    
 
