--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 layout: default
 title: George's Projects
 ---
-
-
+         <ul class="posts">
+{% for post in site.posts %}
+           <li> <a href="{{ post.url }}">{{ post.title }}</a> -- <small> {{ post.date | date_to_string }} </small>
+{% endfor %}
+         </ul>
