--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 ---
+
 layout: default
 title: George's Projects
 ---
-         <ul class="posts">
+<ul id="posts">
 {% for post in site.posts %}
-           <li> <a href="{{ post.url }}">{{ post.title }}</a> -- <small> {{ post.date | date_to_string }} </small>
+<li>
+  <a href="{{ post.url }}">{{ post.title }}</a> -- <small> {{ post.date | date_to_string }} </small>
+  <p> {{ post.excerpt }} </p>
+</li>
 {% endfor %}
-         </ul>
+</ul>
